--- a/README
+++ b/README
@@ -7,6 +7,8 @@ Constraint: you can not use more than one core or processor.
 Evaluation will be based on the nature of the changes in the code, more than on
 the execution speed (as long as the program runs in the required time).
 
+Note: The archive data.tar.gz should be extracted before starting the test: `tar xvzf data.tar.gz`.
+
 Running:
 --------
 
